js/js.translator/testData/incremental/invalidation/moveInlineFunctionBetweenModulesWithCrossModuleInliner/lib2/l22.1.kt
inline fun bar(b: Int) = b - 4
